<?xml version="1.0"?>
<package format="2">
<name>amr_gazebo</name>
<version>0.0.0</version>
<description>The fleet package</description>

<!-- One maintainer tag required, multiple allowed, one person per tag -->
<!-- Example:  -->
<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
<maintainer email="jakub@todo.todo">jakub</maintainer>


<!-- One license tag required, multiple allowed, one license per tag -->
<!-- Commonly used license strings: -->
<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
<license>TODO</license>


<buildtool_depend>catkin</buildtool_depend>
<depend>roscpp</depend>
<depend>std_msgs</depend>
<depend>sensor_msgs</depend>
<depend>geometry_msgs</depend>
<depend>nav_msgs</depend>
<depend>tf</depend>
<depend>gazebo_ros</depend>
<exec_depend>gazebo</exec_depend>
<export>
  <gazebo_ros gazebo_media_path="${prefix}"/>
  <gazebo_ros gazebo_model_path="${prefix}/models"/>
</export>
</package>
